--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 </head>
 <body>
   <h2 style="text-align: center;">
-    It it works correctly, an alert with "It works!" should appear.
+    If it works correctly, an alert with "It works!" should appear.
   </h2>
 
   <script id="worker1" type="text/js-worker">
